Expand multicol column clip to include column overflow.

This patch adds overflow to column fragment clips, since content
should be able to overflow the column.

This is a recent spec change, listed under
https://www.w3.org/TR/css-multicol-1/#changes-from-20110412

Previously, we were required to clip the way we used to
see https://www.w3.org/TR/2011/CR-css3-multicol-20110412/#overflow-inside-multicol-elements

This patch aligns us with the new behavior.

R=chrishtr@chromium.org

Bug: 874124
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I18399eed397482a13955bc5687c12560aa37fb38
Reviewed-on: https://chromium-review.googlesource.com/1175101
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586319}
Former-commit-id: a249ec0e1e4fd7eb5c85f13c63c925d78c5dcfd1