third_party/blink/renderer/core/paint/paint_property_tree_update_tests.cc
@@ -1215,36 +1215,36 @@ TEST_P(PaintPropertyTreeUpdateTest,
 
   auto* flow_thread = GetLayoutObjectByElementId("multicol")->SlowFirstChild();
   ASSERT_EQ(2u, NumFragments(flow_thread));
-  EXPECT_EQ(50, FragmentAt(flow_thread, 0)
-                    .PaintProperties()
-                    ->FragmentClip()
-                    ->ClipRect()
-                    .Rect()
-                    .MaxX());
-  EXPECT_EQ(50, FragmentAt(flow_thread, 1)
-                    .PaintProperties()
-                    ->FragmentClip()
-                    ->ClipRect()
-                    .Rect()
-                    .X());
+  EXPECT_EQ(1000000, FragmentAt(flow_thread, 0)
+                         .PaintProperties()
+                         ->FragmentClip()
+                         ->ClipRect()
+                         .Rect()
+                         .MaxX());
+  EXPECT_EQ(-999950, FragmentAt(flow_thread, 1)
+                         .PaintProperties()
+                         ->FragmentClip()
+                         ->ClipRect()
+                         .Rect()
+                         .X());
 
   GetDocument()
       .getElementById("container")
       ->setAttribute(HTMLNames::styleAttr, "width: 500px");
   GetDocument().View()->UpdateAllLifecyclePhases();
   ASSERT_EQ(2u, NumFragments(flow_thread));
-  EXPECT_EQ(250, FragmentAt(flow_thread, 0)
-                     .PaintProperties()
-                     ->FragmentClip()
-                     ->ClipRect()
-                     .Rect()
-                     .MaxX());
-  EXPECT_EQ(250, FragmentAt(flow_thread, 1)
-                     .PaintProperties()
-                     ->FragmentClip()
-                     ->ClipRect()
-                     .Rect()
-                     .X());
+  EXPECT_EQ(1000000, FragmentAt(flow_thread, 0)
+                         .PaintProperties()
+                         ->FragmentClip()
+                         ->ClipRect()
+                         .Rect()
+                         .MaxX());
+  EXPECT_EQ(-999750, FragmentAt(flow_thread, 1)
+                         .PaintProperties()
+                         ->FragmentClip()
+                         ->ClipRect()
+                         .Rect()
+                         .X());
 }
 
 TEST_P(PaintPropertyTreeUpdateTest,
